fixed overflow issue

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -24,7 +24,7 @@
     transition: all 0.3s ease;
 }
 
-body{
+.navbar{
     overflow-x: hidden;
 }
 .navbar ul {
